# wpsrt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  USAGE.md  pyproject.toml
scripts/: uv-sync.sh
src/wpsrt/: __init__.py  errors.py  inspector.py  main.py  wallpapers.py
src/wpsrt/methods/: aspectratio.py  clip.py  nsfw.py  resolution.py
src/wpsrt/tools/: converter.py  hashing.py
tests/: test_wallpapers.py
wpsrt/: cli.py  wallpapers.py
