[project]
name = "wpsrt"
version = "2.0.33"
description = ""
authors = [{ name = "jpk", email = "jpk@goatpr0n.de" }]
requires-python = "~=3.12"
dependencies = ["click>=8.1.8,<9", "pillow>=11.0.0,<12"]

[project.scripts]
wpsrt = "wpsrt.main:wpsort"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpver]
current_version = "2.0.33"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = "scripts/uv-sync.sh"
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"', '^current_version = "{version}"']
"README.md" = ['{version}$']

[tool.uv.sources]
clickusagemd = { git = "http://github.com/jaypikay/clickusagemd.git", rev = "1.0.1" }

[dependency-groups]
dev = [
    "clickusagemd",
    "pre-commit>=4.2.0",
]
