[project]
name = "wpsrt"
version = "2.3.5"
description = ""
authors = [{ name = "jpk", email = "jpk@goatpr0n.de" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8,<9",
    "imagehash>=4.3.2",
    "nudenet>=3.4.2",
    "pillow>=11.0.0,<12",
]

[project.scripts]
wpsrt = "wpsrt.main:wpsort"
wpsrt-convert = "wpsrt.main:wpconvert"
wpsrt-nsfwinspect = "wpsrt.inspector:nsfw_inspect"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true
build-constraint-dependencies = ["setuptools>=70"]

[tool.uv.build-backend]
source-include = ["models/*.onnx"]

[tool.bumpver]
current_version = "2.3.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = "scripts/uv-sync.sh"
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"', '^current_version = "{version}"']
"README.md" = ['{version}$']

[tool.uv.sources]
clickusagemd = { git = "http://github.com/jaypikay/clickusagemd.git", rev = "1.0.1" }

[dependency-groups]
dev = ["clickusagemd", "pre-commit>=4.2.0"]
